--- a/hive_client/package.json
+++ b/hive_client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "leaflet-geosearch": "^4.0.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2"
   },
