--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "microsoft/azure-storage-blob": "^1.5",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
